--- a/Escoger-Mobiles/build.gradle
+++ b/Escoger-Mobiles/build.gradle
@@ -23,18 +23,18 @@ sourceCompatibility = 1.8
 
 repositories {
   maven { url "http://maven.springframework.org/release" }
-  maven { url "http://maven.restlet.org" }
+  //maven { url "http://maven.restlet.org" }
   mavenCentral()
 }
 
 /* List constants that we use in multiple places. */
 ext.restletVersion = "2.1.2"
 
-dependencies {
+/*dependencies {
   compile "org.restlet.jee:org.restlet:${restletVersion}"
   compile "org.restlet.jee:org.restlet.ext.jackson:${restletVersion}"
   compile "org.restlet.jee:org.restlet.ext.jaxrs:${restletVersion}"
-}
+}*/
 
 
 dependencies {
@@ -43,7 +43,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.session:spring-session-core')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	 compile('com.datastax.cassandra:cassandra-driver-core:2.1.9')
+	// compile('com.datastax.cassandra:cassandra-driver-core:2.1.9')
     compile('com.datastax.cassandra:cassandra-driver-mapping:2.1.9')
     compile('io.smartcat:cassandra-migration-tool:2.1.9.0')
 }
