"Abhishek - updated for get Mobiles information based on brand"

--- a/Escoger-Mobiles/src/main/resources/application.yml
+++ b/Escoger-Mobiles/src/main/resources/application.yml
@@ -20,4 +20,9 @@ spring:
       contact-points: localhost
   jpa:
     show-sql: true
+    
+logging:
+  level:
+    com.datastax.driver.core.QueryLogger.NORMAL: DEBUG
+    com.datastax.driver.core.QueryLogger.SLOW: TRACE
    
