Abhishek - Merged the updated code

--- a/Escoger-Mobiles/bin/main/application.yml
+++ b/Escoger-Mobiles/bin/main/application.yml
@@ -18,3 +18,11 @@ spring:
     cassandra:
       keyspace-name: escoger_mobiles
       contact-points: localhost
+  jpa:
+    show-sql: true
+    
+logging:
+  level:
+    com.datastax.driver.core.QueryLogger.NORMAL: DEBUG
+    com.datastax.driver.core.QueryLogger.SLOW: TRACE
+   
