--- a/Escoger-Mobiles/build.gradle
+++ b/Escoger-Mobiles/build.gradle
@@ -46,4 +46,8 @@ dependencies {
 	// compile('com.datastax.cassandra:cassandra-driver-core:2.1.9')
     compile('com.datastax.cassandra:cassandra-driver-mapping:2.1.9')
     compile('io.smartcat:cassandra-migration-tool:2.1.9.0')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.data:spring-data-rest-hal-browser')
 }
