--- a/Escoger-Mobiles/src/main/resources/application.properties
+++ b/Escoger-Mobiles/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 #logging.path=
 logging.level.root=debug	
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %logger.%M - %msg%n
+#management.endpoints.web.exposure.include=*
